--- a/src/app/features/projects/projects.component.html
+++ b/src/app/features/projects/projects.component.html
@@ -12,6 +12,9 @@
         Proyectos
       </h1>
     </div>
+
+    <!-- Portafolio -->
+
     <div class="flex flex-col gap-8">
       <div class="border-2 border-emerald-500 p-6 flex flex-col md:flex-row gap-8 hover:bg-emerald-500 transition-colors group">
         <div class="w-full md:w-2/3 space-y-4">
@@ -26,23 +29,24 @@
         </div>
         <div class="w-full md:w-1/3 flex flex-col gap-4 ">
           <h3 class="text-white text-basic font-bold tracking-tight">¡Ingresa para ver más detalles sobre el proyecto!</h3>
-            <a href="https://www.figma.com/design/IawICaOkjkeYYmDvS7QACz/Untitled?node-id=0-1&t=wxUIrYOQqH8HsI0O-1" class="border border-emerald-500 p-4 flex items-center gap-4 hover:bg-white group/link">
+            <a href="https://www.figma.com/design/IawICaOkjkeYYmDvS7QACz/Untitled?node-id=0-1&t=wxUIrYOQqH8HsI0O-1" class="border border-emerald-500 p-4 flex items-center gap-4 hover:bg-white hover:text-emerald-500 transition-all group/link">
               <svg class="w-8 h-8 text-emerald-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                 <rect x="2" y="4" width="20" height="16" rx="2" stroke-width="1.5" />
                 <path stroke-linecap="round" stroke-width="1.5" d="M2 8h20M14 12h5M14 15h5M14 18h2" />
                 <rect x="5" y="11" width="6" height="6" rx="1" stroke-width="1.5" />
               </svg>
-              <span class="text-white text-lg font-bold uppercase leading-tight">Diseño de Interfaces</span>
+              <span class="text-white group-hover/link:text-emerald-500 text-lg font-bold uppercase leading-tight">Diseño de Interfaces</span>
             </a>
           <h3 class="text-white text-basic font-bold tracking-tight">¡Ingresa al repositorio para ver el código fuente!</h3>
-          <a href="https://github.com/thealexispinel/PortafolioAlexisPinel" class="border border-emerald-500 p-4 flex items-center gap-4 hover:bg-white hover:text-black transition-all">
+          <a href="https://github.com/thealexispinel/PortafolioAlexisPinel" class="border border-emerald-500 p-4 flex items-center gap-4 hover:bg-white hover:text-emerald-500 transition-all group/link">
             <svg class="w-8 h-8 text-emerald-500" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M10 20l4-16m4 4l4 4-4 4M6 16l-4-4 4-4"></path></svg>
-            <span class="text-white text-lg font-bold uppercase leading-tight">Código Fuente</span>
+            <span class="text-white group-hover/link:text-emerald-500 text-lg font-bold uppercase leading-tight">Código Fuente</span>
           </a>
             <p class="text-white text-basic tracking-tight"><strong>Herremientas</strong><br><strong>Diseño UX/UI:</strong> Figma <br><strong>Backend:</strong> TypeScript <br> <strong>Frontend:</strong> Angular, HTML5, Tailwindcss</p>
         </div>
       </div>
 
+    <!-- Proyecto Calidad de Software -->
 
       <div class="border-2 border-cyan-400 p-6 flex flex-col md:flex-row gap-8 hover:bg-cyan-400/5 transition-colors group">
         <div class="w-full md:w-2/3 space-y-4">
@@ -53,25 +57,27 @@
             Se diseñaron y ejecutaron casos de prueba funcionales y de seguridad, logrando un 92.86% de estabilidad funcional y detectando defectos críticos de seguridad (OWASP / CWE-521) que condicionaron el despliegue a producción.
             El proyecto incluyó definición de métricas de calidad, registro de defectos, análisis de riesgos y veredicto técnico, reforzando la importancia de integrar pruebas funcionales y de seguridad en el ciclo de desarrollo de software.
           </p>
-          <div class="pt-4 border-t border-cyan-400/30 text-base">
+          <div class="pt-4 border-t border-cyan-400 text-base">
             <span class="text-cyan-400 font-bold block">Rol:</span>
             <span class="text-white text-xs">DESARROLLADOR, QA</span>
           </div>
         </div>
         <div class="w-full md:w-1/3 flex flex-col gap-4">
           <h3 class="text-white text-basic font-bold tracking-tight">¡Ingresa para ver más detalles sobre el proyecto!</h3>
-          <a href="https://drive.google.com/file/d/1wvBYFde6hBY85Dfk3VPuWLfnHXrZHZ8N/view?usp=drive_link" class="border border-cyan-400 p-4 flex items-center gap-4 hover:bg-white hover:text-black transition-all group/link">
+          <a href="https://drive.google.com/file/d/1wvBYFde6hBY85Dfk3VPuWLfnHXrZHZ8N/view?usp=drive_link" class="border border-cyan-400 p-4 flex items-center gap-4 hover:bg-white hover:text-cyan-400 transition-all group/link">
             <svg class="w-8 h-8 text-cyan-400" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z"></path></svg>
-            <span class="text-white text-lg font-bold uppercase leading-tight">Documentación</span>
+            <span class="text-white group-hover/link:text-cyan-400 text-lg font-bold uppercase leading-tight">Documentación</span>
           </a>
           <h3 class="text-white text-basic font-bold tracking-tight">¡Ingresa al repositorio para ver el código fuente!</h3>
-          <a href="https://github.com/thealexispinel/RestauranteWushi" class="border border-cyan-400 p-4 flex items-center gap-4 hover:bg-white hover:text-black transition-all">
+          <a href="https://github.com/thealexispinel/RestauranteWushi" class="border border-cyan-400 p-4 flex items-center gap-4 hover:bg-white hover:text-cyan-400 transition-all group/link">
             <svg class="w-8 h-8 text-cyan-400" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M10 20l4-16m4 4l4 4-4 4M6 16l-4-4 4-4"></path></svg>
-            <span class="text-white text-lg font-bold uppercase leading-tight">Código Fuente</span>
+            <span class="text-white group-hover/link:text-cyan-400 text-lg font-bold uppercase leading-tight">Código Fuente</span>
           </a>
-            <p class="text-white text-basic tracking-tight"><strong>Herremientas</strong><br><strong>Backend:</strong> PHP <br> <strong>Frontend:</strong> HTML5, CSS3 <br><strong>QA:</strong> SonarQube Cloud</p>
+            <p class="text-white text-basic tracking-tight"><strong>Herremientas</strong><br><strong>Backend:</strong> PHP <br> <strong>Frontend:</strong> HTML5, CSS3 <br><strong>Base de Datos:</strong> PhpMyAdmin <br><strong>QA:</strong> SonarQube Cloud</p>
         </div>
       </div>
+
+      <!-- Cards Gathering -->
 
       <div class="border-2 border-orange-500 p-6 flex flex-col md:flex-row gap-8 hover:bg-orange-500 transition-colors group">
         <div class="w-full md:w-2/3 space-y-4">
@@ -87,42 +93,70 @@
         </div>
         <div class="w-full md:w-1/3 flex flex-col gap-4">
           <h3 class="text-white text-basic font-bold tracking-tight">¡Ingresa para ver el manual de marca!</h3>
-          <a href="https://drive.google.com/file/d/1g9u8OFdivc01ml0i4UwX0B3CTSv7y73A/view?usp=drive_link" class="border border-orange-500 p-4 flex items-center gap-4 hover:bg-white hover:text-white transition-all group/link">
+          <a href="https://drive.google.com/file/d/1g9u8OFdivc01ml0i4UwX0B3CTSv7y73A/view?usp=drive_link" class="border border-orange-500 p-4 flex items-center gap-4 hover:bg-white hover:text-orange-500 transition-all group/link">
             <svg class="w-8 h-8 text-orange-500" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z"></path></svg>
-            <span class="text-white text-lg font-bold uppercase leading-tight">Manual de Marca</span>
+            <span class="text-white group-hover/link:text-orange-500 text-lg font-bold uppercase leading-tight">Manual de Marca</span>
           </a>
           <h3 class="text-white text-basic font-bold tracking-tight">¡Ingresa para ver el diseño de la web!</h3>
-            <a href="https://www.figma.com/design/IIOTUKEYLjXA17o5ZcUADW/Cards-Gathering--V.II?node-id=0-1&t=HrS4Xn3NK2FCyirX-1" class="border border-orange-500 p-4 flex items-center gap-4 hover:bg-white group/link">
+            <a href="https://www.figma.com/design/IIOTUKEYLjXA17o5ZcUADW/Cards-Gathering--V.II?node-id=0-1&t=HrS4Xn3NK2FCyirX-1" class="border border-orange-500 p-4 flex items-center gap-4 hover:bg-white hover:text-orange-500 transition-all group/link">
               <svg class="w-8 h-8 text-orange-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                 <rect x="2" y="4" width="20" height="16" rx="2" stroke-width="1.5" />
                 <path stroke-linecap="round" stroke-width="1.5" d="M2 8h20M14 12h5M14 15h5M14 18h2" />
                 <rect x="5" y="11" width="6" height="6" rx="1" stroke-width="1.5" />
               </svg>
-              <span class="text-white text-lg font-bold uppercase leading-tight">Diseño de Interfaces</span>
+              <span class="text-white group-hover/link:text-orange-500 text-lg font-bold uppercase leading-tight">Diseño de Interfaces</span>
             </a>
             <p class="text-white text-basic tracking-tight"><strong>Herremientas</strong><br><strong>Diseño Gráfico:</strong><br> Adobe Photoshop, Adobe Illustrator <br> <strong>Diseño UX/UI:</strong> Figma</p>
         </div>
       </div>
 
+      <!-- Filmania DB -->
+
+      <div class="border-2 border-amber-500 p-6 flex flex-col md:flex-row gap-8 hover:bg-amber-500/5 transition-colors">
+        <div class="w-full md:w-2/3 space-y-4">
+          <h2 class="text-white text-3xl font-bold uppercase tracking-tight">Sistema de Gestión de Cine [Filmania]</h2>
+          <p class="text-white text-xs md:text-sm leading-relaxed text-justify font-light">
+            Proyecto de base de datos relacional diseñado para la administración integral de un cine, permitiendo gestionar de forma eficiente películas, funciones, salas, asientos, usuarios, ventas y control de accesos mediante códigos QR.
+          </p>
+          <div class="pt-4 border-t border-amber-500">
+            <span class="text-amber-500 font-bold block">Rol:</span>
+            <span class="text-white text-xs">DISEÑADOR Y GESTOR DE BASE DE DATOS</span>
+          </div>
+        </div>
+        <div class="w-full md:w-1/3 flex flex-col gap-4">
+          <h3 class="text-white text-basic font-bold tracking-tight">¡Ingresa para ver el diseño de la base de datos!</h3>
+            <a href="https://github.com/thealexispinel/FilmaniaDB.git" class="border border-amber-500 p-4 flex items-center gap-4 hover:bg-white hover:text-amber-500 transition-all group/link">
+              <svg class="w-8 h-8 text-amber-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                <ellipse cx="12" cy="5" rx="9" ry="3" stroke-width="1.5" />
+                <path stroke-linecap="round" stroke-width="1.5" d="M3 5v14c0 1.657 4.03 3 9 3s9-1.343 9-3V5M3 12c0 1.657 4.03 3 9 3s9-1.343 9-3" />
+              </svg>
+              <span class="text-white group-hover/link:text-amber-500 text-lg font-bold uppercase leading-tight">Base de Datos</span>
+            </a>
+            <p class="text-white text-basic tracking-tight"><strong>Herremientas</strong><br><strong>Base de Datos:</strong> MySQL Workbech</p>
+        </div>
+      </div>
+
+      <!-- Cody -->
+
       <div class="border-2 border-blue-600 p-6 flex flex-col md:flex-row gap-8 hover:bg-blue-600/5 transition-colors">
         <div class="w-full md:w-2/3 space-y-4">
           <h2 class="text-white text-3xl font-bold uppercase tracking-tight">Cody</h2>
           <p class="text-white text-xs md:text-sm leading-relaxed text-justify font-light">
-            Diseño UX/UI para un juego educativo sobre los protocolos HTTP.
+            Diseño UX/UI para Cody, un juego educativo sobre los protocolos HTTP.
           </p>
-          <div class="pt-4 border-t border-blue-600/30">
+          <div class="pt-4 border-t border-blue-600">
             <span class="text-blue-500 font-bold block">Rol:</span>
             <span class="text-white text-xs">DISEÑADOR UX/UI</span>
           </div>
         </div>
         <div class="w-full md:w-1/3 flex flex-col gap-4">
-            <a href="https://www.figma.com/design/tqCtnoHcGDF4mVyDSg95zC/Cody?node-id=0-1&t=UuqyPw8uJ0dB30ZN-1" class="border border-blue-500 p-4 flex items-center gap-4 hover:bg-white group/link">
+            <a href="https://www.figma.com/design/tqCtnoHcGDF4mVyDSg95zC/Cody?node-id=0-1&t=UuqyPw8uJ0dB30ZN-1" class="border border-blue-500 p-4 flex items-center gap-4 hover:bg-white hover:text-blue-500 transition-all group/link">
               <svg class="w-8 h-8 text-blue-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                 <rect x="2" y="4" width="20" height="16" rx="2" stroke-width="1.5" />
                 <path stroke-linecap="round" stroke-width="1.5" d="M2 8h20M14 12h5M14 15h5M14 18h2" />
                 <rect x="5" y="11" width="6" height="6" rx="1" stroke-width="1.5" />
               </svg>
-              <span class="text-white text-lg font-bold uppercase leading-tight">Diseño de Interfaces</span>
+              <span class="text-white group-hover/link:text-blue-500 text-lg font-bold uppercase leading-tight">Diseño de Interfaces</span>
             </a>
             <p class="text-white text-basic tracking-tight"><strong>Herremientas</strong><br><strong>Diseño UX/UI:</strong> Figma</p>
         </div>
