Prueba de responsive 1.2

--- a/src/app/features/about/about.component.html
+++ b/src/app/features/about/about.component.html
@@ -1,4 +1,4 @@
-<section class="fixed inset-0 h-screen w-full bg-black flex items-center  items-start justify-center p-6 md:p-6 overflow-y-auto font-mono">
+<section class="fixed inset-0 h-screen w-full bg-black flex items-center justify-center p-6 md:p-6 overflow-y-auto font-mono">
   <div class="border-2 border-white w-full max-w-6xl mx-auto my-auto relative p-6 md:p-10 flex flex-col bg-black">
     <div class="flex flex-col md:flex-row justify-between items-start gap-4 mb-8">
       <div>
