Actualización de responsive 2.1

--- a/src/app/features/projects/projects.component.html
+++ b/src/app/features/projects/projects.component.html
@@ -1,6 +1,5 @@
 <section class="min-h-screen w-full bg-black flex justify-center items-start p-4 md:p-12 font-mono overflow-y-auto">
   <div class="border-2 border-white w-full max-w-6xl my-auto relative p-6 md:p-10 flex flex-col bg-black shadow-2xl">
-    
     <div class="mb-8">
         <a routerLink="/home"
            routerLinkActive="text-cyan-400 font-bold" 
@@ -8,7 +7,7 @@
            class="text-orange-500 text-xl font-bold hover:underline mb-2 block">
           [..] REGRESAR
         </a>
-        <h1 class="text-white text-6xl md:text-8xl font-bold uppercase tracking-tighter leading-none">
+        <h1 class="text-white text-xl md:text-8xl font-bold uppercase tracking-tighter leading-none">
           Proyectos
         </h1>
     </div>
@@ -18,7 +17,7 @@
     <div class="flex flex-col gap-8">
       <div class="border-2 border-emerald-500 p-6 flex flex-col md:flex-row gap-8 hover:bg-emerald-500 transition-colors group">
         <div class="w-full md:w-2/3 space-y-4">
-          <h2 class="text-white text-3xl font-bold uppercase tracking-tight">Portafolio Profesional</h2>
+          <h2 class="text-white text-lg font-bold uppercase tracking-tight">Portafolio Profesional</h2>
           <p class="text-white text-xs md:text-sm leading-relaxed text-justify font-light">
             Un proyecto enfocado en presentar información sobre mí y mis proyectos.
           </p>
@@ -30,17 +29,17 @@
         <div class="w-full md:w-1/3 flex flex-col gap-4 ">
           <h3 class="text-white text-basic font-bold tracking-tight">¡Ingresa para ver más detalles sobre el proyecto!</h3>
             <a href="https://www.figma.com/design/IawICaOkjkeYYmDvS7QACz/Untitled?node-id=0-1&t=wxUIrYOQqH8HsI0O-1" class="border border-emerald-500 p-4 flex items-center gap-4 hover:bg-white hover:text-emerald-500 transition-all group/link">
-              <svg class="w-8 h-8 text-emerald-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+              <svg class="max-w-[40px] max-h-[40px] text-emerald-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                 <rect x="2" y="4" width="20" height="16" rx="2" stroke-width="1.5" />
                 <path stroke-linecap="round" stroke-width="1.5" d="M2 8h20M14 12h5M14 15h5M14 18h2" />
                 <rect x="5" y="11" width="6" height="6" rx="1" stroke-width="1.5" />
               </svg>
-              <span class="text-white group-hover/link:text-emerald-500 text-lg font-bold uppercase leading-tight">Diseño de Interfaces</span>
+              <span class="text-white group-hover/link:text-emerald-500 text-base font-bold leading-tight">Diseño de Interfaces</span>
             </a>
           <h3 class="text-white text-basic font-bold tracking-tight">¡Ingresa al repositorio para ver el código fuente!</h3>
           <a href="https://github.com/thealexispinel/PortafolioAlexisPinel" class="border border-emerald-500 p-4 flex items-center gap-4 hover:bg-white hover:text-emerald-500 transition-all group/link">
             <svg class="w-8 h-8 text-emerald-500" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M10 20l4-16m4 4l4 4-4 4M6 16l-4-4 4-4"></path></svg>
-            <span class="text-white group-hover/link:text-emerald-500 text-lg font-bold uppercase leading-tight">Código Fuente</span>
+            <span class="text-white group-hover/link:text-emerald-500 text-base font-bold leading-tight">Código Fuente</span>
           </a>
             <p class="text-white text-basic tracking-tight"><strong>Herremientas</strong><br><strong>Diseño UX/UI:</strong> Figma <br><strong>Backend:</strong> TypeScript <br> <strong>Frontend:</strong> Angular, HTML5, Tailwindcss</p>
         </div>
@@ -50,7 +49,7 @@
 
       <div class="border-2 border-cyan-400 p-6 flex flex-col md:flex-row gap-8 hover:bg-cyan-400/5 transition-colors group">
         <div class="w-full md:w-2/3 space-y-4">
-          <h2 class="text-white text-3xl font-bold uppercase tracking-tight">PLAN DE EVALUACIÓN – MÓDULO DE AUTENTICACIÓN (LOGIN, LOGOUT, RECUPERACIÓN DE CONTRASEÑA, EMAIL, BLOQUEO)</h2>
+          <h2 class="text-white text-lg font-bold uppercase tracking-tight">PLAN DE EVALUACIÓN – MÓDULO DE AUTENTICACIÓN (LOGIN, LOGOUT, RECUPERACIÓN DE CONTRASEÑA, EMAIL, BLOQUEO)</h2>
           <p class="text-white text-xs md:text-sm leading-relaxed text-justify font-light">
             Desarrollo y ejecución de un plan de pruebas integral para un módulo de autenticación web, cubriendo funcionalidades críticas como registro de usuarios, login, logout, bloqueo por intentos fallidos y recuperación de contraseña. <br>
             El proyecto se basó en los estándares IEEE 829 e ISO/IEC 29119-3, aplicando técnicas de pruebas de caja negra (clases de equivalencia, valores límite, tablas de decisión y pruebas de estado) y análisis estático de código con SonarQube Cloud. <br>
@@ -65,13 +64,13 @@
         <div class="w-full md:w-1/3 flex flex-col gap-4">
           <h3 class="text-white text-basic font-bold tracking-tight">¡Ingresa para ver más detalles sobre el proyecto!</h3>
           <a href="https://drive.google.com/file/d/1wvBYFde6hBY85Dfk3VPuWLfnHXrZHZ8N/view?usp=drive_link" class="border border-cyan-400 p-4 flex items-center gap-4 hover:bg-white hover:text-cyan-400 transition-all group/link">
-            <svg class="w-8 h-8 text-cyan-400" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z"></path></svg>
-            <span class="text-white group-hover/link:text-cyan-400 text-lg font-bold uppercase leading-tight">Documentación</span>
+            <svg class="max-w-[30px] max-h-[30px] text-cyan-400" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z"></path></svg>
+            <span class="text-white group-hover/link:text-cyan-400 text-lg font-bold uppercase leading-tight">Doc.</span>
           </a>
           <h3 class="text-white text-basic font-bold tracking-tight">¡Ingresa al repositorio para ver el código fuente!</h3>
           <a href="https://github.com/thealexispinel/RestauranteWushi" class="border border-cyan-400 p-4 flex items-center gap-4 hover:bg-white hover:text-cyan-400 transition-all group/link">
             <svg class="w-8 h-8 text-cyan-400" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M10 20l4-16m4 4l4 4-4 4M6 16l-4-4 4-4"></path></svg>
-            <span class="text-white group-hover/link:text-cyan-400 text-lg font-bold uppercase leading-tight">Código Fuente</span>
+            <span class="text-white group-hover/link:text-cyan-400 text-lg font-bold leading-tight">Código Fuente</span>
           </a>
             <p class="text-white text-basic tracking-tight"><strong>Herremientas</strong><br><strong>Backend:</strong> PHP <br> <strong>Frontend:</strong> HTML5, CSS3 <br><strong>Base de Datos:</strong> PhpMyAdmin (MariaDB) <br><strong>QA:</strong> SonarQube Cloud</p>
         </div>
@@ -81,7 +80,7 @@
 
       <div class="border-2 border-orange-500 p-6 flex flex-col md:flex-row gap-8 hover:bg-orange-500 transition-colors group">
         <div class="w-full md:w-2/3 space-y-4">
-          <h2 class="text-white text-3xl font-bold uppercase tracking-tight">E-Commerce de Juegos de Cartas Coleccionables [Cards Gathering]</h2>
+          <h2 class="text-white text-lg font-bold uppercase tracking-tight">E-Commerce de Juegos de Cartas Coleccionables [Cards Gathering]</h2>
           <p class="text-white text-xs md:text-sm leading-relaxed text-justify font-light">
             Aquí se presenta el diseño para una plataforma de comercio electrónico enfocada en la venta, compra y subasta de artículos relacionados al mundo TCG. <br>
             Se puede encontrar el manual de marca que muestra detalles sobre el logo y cómo es su correcto uso. También encontrará el diseño UX/UI de las pantallas de cada módulo (Autenticación, Mercado, Ventas, Subastas, etc).
@@ -94,17 +93,17 @@
         <div class="w-full md:w-1/3 flex flex-col gap-4">
           <h3 class="text-white text-basic font-bold tracking-tight">¡Ingresa para ver el manual de marca!</h3>
           <a href="https://drive.google.com/file/d/1g9u8OFdivc01ml0i4UwX0B3CTSv7y73A/view?usp=drive_link" class="border border-orange-500 p-4 flex items-center gap-4 hover:bg-white hover:text-orange-500 transition-all group/link">
-            <svg class="w-8 h-8 text-orange-500" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z"></path></svg>
-            <span class="text-white group-hover/link:text-orange-500 text-lg font-bold uppercase leading-tight">Manual de Marca</span>
+            <svg class="max-w-[40px] max-h-[40px] text-orange-500" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z"></path></svg>
+            <span class="text-white group-hover/link:text-orange-500 text-lg font-bold leading-tight">Manual de Marca</span>
           </a>
           <h3 class="text-white text-basic font-bold tracking-tight">¡Ingresa para ver el diseño de la web!</h3>
             <a href="https://www.figma.com/design/IIOTUKEYLjXA17o5ZcUADW/Cards-Gathering--V.II?node-id=0-1&t=HrS4Xn3NK2FCyirX-1" class="border border-orange-500 p-4 flex items-center gap-4 hover:bg-white hover:text-orange-500 transition-all group/link">
-              <svg class="w-8 h-8 text-orange-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+              <svg class="max-w-[40px] max-h-[40px] text-orange-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                 <rect x="2" y="4" width="20" height="16" rx="2" stroke-width="1.5" />
                 <path stroke-linecap="round" stroke-width="1.5" d="M2 8h20M14 12h5M14 15h5M14 18h2" />
                 <rect x="5" y="11" width="6" height="6" rx="1" stroke-width="1.5" />
               </svg>
-              <span class="text-white group-hover/link:text-orange-500 text-lg font-bold uppercase leading-tight">Diseño de Interfaces</span>
+              <span class="text-white group-hover/link:text-orange-500 text-lg font-bold leading-tight">Diseño de Interfaces</span>
             </a>
             <p class="text-white text-basic tracking-tight"><strong>Herremientas</strong><br><strong>Diseño Gráfico:</strong><br> Adobe Photoshop, Adobe Illustrator <br> <strong>Diseño UX/UI:</strong> Figma</p>
         </div>
@@ -114,7 +113,7 @@
 
       <div class="border-2 border-amber-500 p-6 flex flex-col md:flex-row gap-8 hover:bg-amber-500/5 transition-colors">
         <div class="w-full md:w-2/3 space-y-4">
-          <h2 class="text-white text-3xl font-bold tracking-tight">IMMERSIVE TOUR <br> En Colaboración con MDU</h2>
+          <h2 class="text-white text-xl font-bold tracking-tight">IMMERSIVE TOUR <br> En Colaboración con MDU</h2>
           <div>
             <p class="text-white text-xs md:text-sm leading-relaxed text-justify font-light">
               Immersive Tour es un proyecto colaborativo desarrollado por estudiantes de la Universidad Tecnológica de Panamá y profesores la Universidad de Mälardalen (Suecia). <br> El objetivo principal es cerrar la brecha entre los espacios físicos y virtuales mediante la creación de una aplicación de Realidad Aumentada (AR) que permite la interacción en tiempo real con entornos inteligentes. 
@@ -128,14 +127,14 @@
           </div>
           <div class="pt-4 border-t border-amber-500">
             <span class="text-amber-500 font-bold block">Rol:</span>
-            <span class="text-white text-xs">DESARROLLADOR, DISEÑADOR UX/UI</span>
+            <span class="text-white text-xs">DISEÑADOR UX/UI</span>
           </div>
         </div>
         <div class="w-full md:w-1/3 flex flex-col gap-4">
           <h3 class="text-white text-basic font-bold tracking-tight">¡Ingresa para ver el poster del proyecto!</h3>
           <a href="https://drive.google.com/file/d/1Ykq4S8FOiq8-WSdunjY8Cy-VCzqHuf7b/view?usp=drive_link" class="border border-amber-500 p-4 flex items-center gap-4 hover:bg-white hover:text-amber-500 transition-all group/link">
-            <svg class="w-8 h-8 text-amber-500" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z"></path></svg>
-            <span class="text-white group-hover/link:text-amber-500 text-lg font-bold uppercase leading-tight">Documentación</span>
+            <svg class="max-w-[30px] max-h-[30px] text-amber-500" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z"></path></svg>
+            <span class="text-white group-hover/link:text-amber-500 text-lg font-bold leading-tight">Doc.</span>
           </a>
             <p class="text-white text-basic tracking-tight"><strong>Herremientas</strong><br><strong>Diseño UX/UI:</strong> Unity Canvas</p>
         </div>
@@ -145,7 +144,7 @@
 
       <div class="border-2 border-sky-600 p-6 flex flex-col md:flex-row gap-8 hover:bg-sky-600/5 transition-colors">
         <div class="w-full md:w-2/3 space-y-4">
-          <h2 class="text-white text-3xl font-bold uppercase tracking-tight">Sistema de Gestión de Cine [Filmania]</h2>
+          <h2 class="text-white text-xl font-bold uppercase tracking-tight">Sistema de Gestión de Cine [Filmania]</h2>
           <p class="text-white text-xs md:text-sm leading-relaxed text-justify font-light">
             Proyecto de base de datos relacional diseñado para la administración integral de un cine, permitiendo gestionar de forma eficiente películas, funciones, salas, asientos, usuarios, ventas y control de accesos mediante códigos QR.
           </p>
@@ -161,7 +160,7 @@
                 <ellipse cx="12" cy="5" rx="9" ry="3" stroke-width="1.5" />
                 <path stroke-linecap="round" stroke-width="1.5" d="M3 5v14c0 1.657 4.03 3 9 3s9-1.343 9-3V5M3 12c0 1.657 4.03 3 9 3s9-1.343 9-3" />
               </svg>
-              <span class="text-white group-hover/link:text-sky-600 text-lg font-bold uppercase leading-tight">Base de Datos</span>
+              <span class="text-white group-hover/link:text-sky-600 text-lg font-bold leading-tight">Base de Datos</span>
             </a>
             <p class="text-white text-basic tracking-tight"><strong>Herremientas</strong><br><strong>Base de Datos:</strong> MySQL Workbech (SQL)</p>
         </div>
@@ -171,7 +170,7 @@
 
       <div class="border-2 border-blue-600 p-6 flex flex-col md:flex-row gap-8 hover:bg-blue-600/5 transition-colors">
         <div class="w-full md:w-2/3 space-y-4">
-          <h2 class="text-white text-3xl font-bold uppercase tracking-tight">Cody</h2>
+          <h2 class="text-white text-xl font-bold uppercase tracking-tight">Cody</h2>
           <p class="text-white text-xs md:text-sm leading-relaxed text-justify font-light">
             Diseño UX/UI para Cody, un juego educativo sobre los protocolos HTTP.
           </p>
@@ -181,13 +180,14 @@
           </div>
         </div>
         <div class="w-full md:w-1/3 flex flex-col gap-4">
+          <h3 class="text-white text-basic font-bold tracking-tight">¡Ingresa para ver el diseño del app!</h3>
             <a href="https://www.figma.com/design/tqCtnoHcGDF4mVyDSg95zC/Cody?node-id=0-1&t=UuqyPw8uJ0dB30ZN-1" class="border border-blue-500 p-4 flex items-center gap-4 hover:bg-white hover:text-blue-500 transition-all group/link">
-              <svg class="w-8 h-8 text-blue-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+              <svg class="max-w-[40px] max-h-[40px] text-blue-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                 <rect x="2" y="4" width="20" height="16" rx="2" stroke-width="1.5" />
                 <path stroke-linecap="round" stroke-width="1.5" d="M2 8h20M14 12h5M14 15h5M14 18h2" />
                 <rect x="5" y="11" width="6" height="6" rx="1" stroke-width="1.5" />
               </svg>
-              <span class="text-white group-hover/link:text-blue-500 text-lg font-bold uppercase leading-tight">Diseño de Interfaces</span>
+              <span class="text-white group-hover/link:text-blue-500 text-lg font-bold leading-tight">Diseño de Interfaces</span>
             </a>
             <p class="text-white text-basic tracking-tight"><strong>Herremientas</strong><br><strong>Diseño UX/UI:</strong> Figma</p>
         </div>
