Actualización de responsive 2.1

--- a/src/app/features/projects/projects.component.html
+++ b/src/app/features/projects/projects.component.html
@@ -80,7 +80,7 @@
 
       <div class="border-2 border-orange-500 p-6 flex flex-col md:flex-row gap-8 hover:bg-orange-500 transition-colors group">
         <div class="w-full md:w-2/3 space-y-4">
-          <h2 class="text-white text-lg font-bold uppercase tracking-tight">E-Commerce de Juegos de Cartas Coleccionables [Cards Gathering]</h2>
+          <h2 class="text-white text-xl font-bold uppercase tracking-tight">E-Commerce de Juegos de Cartas Coleccionables [Cards Gathering]</h2>
           <p class="text-white text-xs md:text-sm leading-relaxed text-justify font-light">
             Aquí se presenta el diseño para una plataforma de comercio electrónico enfocada en la venta, compra y subasta de artículos relacionados al mundo TCG. <br>
             Se puede encontrar el manual de marca que muestra detalles sobre el logo y cómo es su correcto uso. También encontrará el diseño UX/UI de las pantallas de cada módulo (Autenticación, Mercado, Ventas, Subastas, etc).
@@ -113,7 +113,7 @@
 
       <div class="border-2 border-amber-500 p-6 flex flex-col md:flex-row gap-8 hover:bg-amber-500/5 transition-colors">
         <div class="w-full md:w-2/3 space-y-4">
-          <h2 class="text-white text-xl font-bold tracking-tight">IMMERSIVE TOUR <br> En Colaboración con MDU</h2>
+          <h2 class="text-white text-xl font-bold uppercase tracking-tight">IMMERSIVE TOUR <br> En Colaboración con MDU</h2>
           <div>
             <p class="text-white text-xs md:text-sm leading-relaxed text-justify font-light">
               Immersive Tour es un proyecto colaborativo desarrollado por estudiantes de la Universidad Tecnológica de Panamá y profesores la Universidad de Mälardalen (Suecia). <br> El objetivo principal es cerrar la brecha entre los espacios físicos y virtuales mediante la creación de una aplicación de Realidad Aumentada (AR) que permite la interacción en tiempo real con entornos inteligentes. 
