--- a/src/app/features/projects/projects.component.html
+++ b/src/app/features/projects/projects.component.html
@@ -17,7 +17,7 @@
     <div class="flex flex-col gap-8">
       <div class="border-2 border-emerald-500 p-6 flex flex-col md:flex-row gap-8 hover:bg-emerald-500 transition-colors group">
         <div class="w-full md:w-2/3 space-y-4">
-          <h2 class="text-white text-lg font-bold uppercase tracking-tight">Portafolio Profesional</h2>
+          <h2 class="text-white text-xl font-bold uppercase tracking-tight">Portafolio Profesional</h2>
           <p class="text-white text-xs md:text-sm leading-relaxed text-justify font-light">
             Un proyecto enfocado en presentar información sobre mí y mis proyectos.
           </p>
