--- a/src/app/features/projects/projects.component.html
+++ b/src/app/features/projects/projects.component.html
@@ -7,7 +7,7 @@
            class="text-orange-500 text-xl font-bold hover:underline mb-2 block">
           [..] REGRESAR
         </a>
-        <h1 class="text-white text-xl md:text-8xl font-bold uppercase tracking-tighter leading-none">
+        <h1 class="text-white text-xl md:text-8xl font-bold uppercase tracking-tighter mt-4 leading-none">
           Proyectos
         </h1>
     </div>
@@ -19,7 +19,7 @@
         <div class="w-full md:w-2/3 space-y-4">
           <h2 class="text-white text-xl font-bold uppercase tracking-tight">Portafolio Profesional</h2>
           <p class="text-white text-xs md:text-sm leading-relaxed text-justify font-light">
-            Un proyecto enfocado en presentar información sobre mí y mis proyectos.
+            Proyecto de portafolio personal enfocado en consolidar mi identidad profesional, mostrando quién soy, qué hago y los proyectos que reflejan mis conocimientos, experiencia y crecimiento como desarrollador.
           </p>
           <div class="pt-4 border-t border-emerald-500 text-base">
             <span class="text-emerald-500 font-bold block">Rol:</span>
@@ -34,12 +34,12 @@
                 <path stroke-linecap="round" stroke-width="1.5" d="M2 8h20M14 12h5M14 15h5M14 18h2" />
                 <rect x="5" y="11" width="6" height="6" rx="1" stroke-width="1.5" />
               </svg>
-              <span class="text-white group-hover/link:text-emerald-500 text-base font-bold leading-tight">Diseño de Interfaces</span>
+              <span class="text-white group-hover/link:text-emerald-500 text-lg font-bold leading-tight">Diseño de Interfaces</span>
             </a>
           <h3 class="text-white text-basic font-bold tracking-tight">¡Ingresa al repositorio para ver el código fuente!</h3>
           <a href="https://github.com/thealexispinel/PortafolioAlexisPinel" class="border border-emerald-500 p-4 flex items-center gap-4 hover:bg-white hover:text-emerald-500 transition-all group/link">
             <svg class="w-8 h-8 text-emerald-500" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M10 20l4-16m4 4l4 4-4 4M6 16l-4-4 4-4"></path></svg>
-            <span class="text-white group-hover/link:text-emerald-500 text-base font-bold leading-tight">Código Fuente</span>
+            <span class="text-white group-hover/link:text-emerald-500 text-lg font-bold leading-tight">Código Fuente</span>
           </a>
             <p class="text-white text-basic tracking-tight"><strong>Herremientas</strong><br><strong>Diseño UX/UI:</strong> Figma <br><strong>Backend:</strong> TypeScript <br> <strong>Frontend:</strong> Angular, HTML5, Tailwindcss</p>
         </div>
@@ -65,7 +65,7 @@
           <h3 class="text-white text-basic font-bold tracking-tight">¡Ingresa para ver más detalles sobre el proyecto!</h3>
           <a href="https://drive.google.com/file/d/1wvBYFde6hBY85Dfk3VPuWLfnHXrZHZ8N/view?usp=drive_link" class="border border-cyan-400 p-4 flex items-center gap-4 hover:bg-white hover:text-cyan-400 transition-all group/link">
             <svg class="max-w-[30px] max-h-[30px] text-cyan-400" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z"></path></svg>
-            <span class="text-white group-hover/link:text-cyan-400 text-lg font-bold uppercase leading-tight">Doc.</span>
+            <span class="text-white group-hover/link:text-cyan-400 text-lg font-bold leading-tight">Doc.</span>
           </a>
           <h3 class="text-white text-basic font-bold tracking-tight">¡Ingresa al repositorio para ver el código fuente!</h3>
           <a href="https://github.com/thealexispinel/RestauranteWushi" class="border border-cyan-400 p-4 flex items-center gap-4 hover:bg-white hover:text-cyan-400 transition-all group/link">
